# biomodals

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
biomodals/: __init__.py  cli.py
biomodals/app/bioinfo/: gromacs_app.py  paddleocr_app.py
biomodals/app/bioinfo/gromacs/: amber2gmx.py  leap.in  prepare-tpr.sh  rosetta2amber.sh
biomodals/app/bioinfo/gromacs/gmx_itp/: ions_ca.itp  ions_cl.itp  ions_na.itp  tip3p.itp
biomodals/app/bioinfo/gromacs/gmx_mdp/: cg.mdp  minim.mdp  npt.mdp  nvt.mdp  production.mdp
biomodals/app/design/: antifold_app.py  boltzgen_app.py  hello.py  ligandmpnn_app.py
biomodals/app/fold/: abcfold2.py  abcfold2_app.py
biomodals/app/score/: abnativ_app.py
clients/fold/: abcfold2.py
scripts/fold/: abcfold2.py
