[project]
name = "biomodals"
version = "0.1.0"
description = "Run biomodelling tasks with Modal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modal>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
biomodals = "biomodals.cli:app"

[build-system]
requires = ["uv_build>=0.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "biomodals"
module-root = ""
